2020-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/html_fragments.py: Automatically generate HTML footer
	content and include commented HTML fragment which may be
	substituted with SF tracker for SourceForge web site.

2020-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Updates in preparation for the 1.3.35 release.

	* www/INSTALL-windows.rst: Update Windows installation and build
	documentation.

2020-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with News since previous release.

	* magick/magick.c (InitializeMagickSignalHandlers): This private
	implementation function is now a static function as it should have
	been.
	(InitializeMagickEx): New function which may be used in place of
	InitializeMagick() to initialize GraphicsMagick.  This
	initialization function returns an error status value, may update
	a passed ExceptionInfo structure with error information, and
	provides an options parameter which supports simple bit-flags to
	tailor initialization.  The signal handler registrations are
	skipped if the MAGICK_OPT_NO_SIGNAL_HANDER flag is set in the
	options.

2020-02-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (MagickToMime): Add a MIME translation for
	"jpg".  Issue reported by Pro Turm.

2020-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-windows.rst: Add quoting to avoid losing backslashes
	in Windows paths.

2020-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h: Add missing unsupported handling for some
	recently added GCC/Clang attributes.

	* magick/: Move all remaining private implementation code in
	public headers which is guarded by MAGICK_IMPLEMENTATION into
	private headers, which are never installed.

2020-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Evidence suggests that large
	strip sizes improve performance by reducing the number of I/Os.