@@ -38,6 +38,9 @@
 <p>2020-03-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/api.h: Add &quot;magick/enum_strings.h&quot; to API headers.
+Requested by Przemysław Sobala via posting to the
+graphicsmagick-help mailing list on 2020-02-27.</li>
 <li>scripts/html_fragments.py: Automatically generate HTML footer
 content and include commented HTML fragment which may be
 substituted with SF tracker for SourceForge web site.</li>
